[package]
description = "Macros helpers for GTK 4 bindings"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4_macros"
keywords = ["gtk", "gtk4", "gtk-rs", "gnome", "GUI"]
name = "gtk4-macros"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[features]
default = []
xml_validation = ["quick-xml"]
blueprint = []

[dependencies]
quick-xml = {version = "0.41", optional = true}
proc-macro-crate = "3.5"
proc-macro2 = { version = "1.0.100", features = ["span-locations"] }
quote = "1.0"
syn = {version = "3.0", features = ["full"]}

[dev-dependencies]
futures-channel = "0.3"
futures-util = "0.3"
gtk = { workspace = true, features = ["v4_10"] }
trybuild2 = "1.0"
