[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
libc = "0.2"

[dependencies.atk-sys]
path = "../atk-sys"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk-pixbuf-sys]
path = "../gdk-pixbuf-sys"

[dependencies.gdk4-sys]
path = "../gdk4-sys"

[dependencies.gio-sys]
path = "../gio-sys"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[dependencies.graphene-sys]
git = "https://github.com/gtk-rs/graphene"

[dependencies.gsk4-sys]
path = "../gsk4-sys"

[dependencies.pango-sys]
path = "../pango-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
dox = []

[lib]
name = "gtk4_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgtk-4"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "gtk4", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gtk4"
name = "gtk4-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.1.0"
[package.metadata.docs.rs]
features = ["dox"]
