[package]
authors = ["The gtk-rs Project Developers"]
categories = ["api-bindings", "gui"]
description = "Rust bindings of the GTK 4 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gtk", "gtk4", "gtk-rs", "gnome", "GUI"]
license = "MIT"
name = "gtk4"
readme = "README.md"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.4.10"
rust-version = "1.56"

[lib]
name = "gtk4"

[features]
dox = ["gdk/dox", "gsk/dox", "ffi/dox"]
v4_2 = ["ffi/v4_2", "gdk/v4_2", "gsk/v4_2"]
v4_4 = ["ffi/v4_4", "v4_2", "gdk/v4_4", "gsk/v4_4"]
v4_6 = ["ffi/v4_6", "v4_4", "gdk/v4_6", "gsk/v4_6", "pango/v1_50"]
v4_8 = ["ffi/v4_8", "v4_6", "gdk/v4_8"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
bitflags = "1.0"
cairo-rs = {version = "0.15.1", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15" }
ffi = {package = "gtk4-sys", path = "./sys", version = "0.4.9"}
field-offset = "0.3"
futures-channel = "0.3"
gdk = {package = "gdk4", path = "../gdk4", version = "0.4.9"}
gdk-pixbuf = {version = "0.15.1", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15" }
gio = {features = ["v2_66"], version = "0.15.2", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15"}
glib = {features = ["v2_66"], version = "0.15.3", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15"}
graphene = {package = "graphene-rs", version = "0.15.1", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15"}
gsk = {package = "gsk4", path = "../gsk4", version = "0.4.9"}
gtk4-macros = {path = "../gtk4-macros", version = "0.4.9"}
libc = "0.2"
once_cell = "1.0"
pango = {features = ["v1_46"], version = "0.15.2", git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.15"}

[dev-dependencies]
gir-format-check = "^0.1"
