[package]
name = "gtk4"
description = "Rust bindings of the GTK 4 library"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4"
keywords = ["gtk", "gtk4", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "gtk4"

[features]
v4_2 = ["gtk4-sys/v4_2", "gdk/v4_2", "gsk/v4_2"]
v4_4 = ["gtk4-sys/v4_4", "v4_2", "gdk/v4_4", "gsk/v4_4"]
v4_6 = ["gtk4-sys/v4_6", "v4_4", "gdk/v4_6", "gsk/v4_6", "pango/v1_50"]
v4_8 = ["gtk4-sys/v4_8", "v4_6", "gdk/v4_8"]
v4_10 = ["gtk4-sys/v4_10", "v4_8", "gdk/v4_10", "gsk/v4_10"]
v4_12 = ["gtk4-sys/v4_12", "v4_10", "gdk/v4_12"]
v4_14 = ["gtk4-sys/v4_14", "v4_12", "gdk/v4_14", "gsk/v4_14"]
v4_16 = ["gtk4-sys/v4_16", "v4_14", "gdk/v4_16", "gsk/v4_16"]
v4_18 = ["gtk4-sys/v4_18", "gdk/v4_18", "v4_16"]
gio_v2_80 = ["gio/v2_80"]
xml_validation = ["gtk4-macros/xml_validation"]
blueprint = ["gtk4-macros/blueprint"]
unsafe-assume-initialized = []

# Versions from https://gitlab.gnome.org/GNOME/gnome-build-meta/-/tree/gnome-43/elements/sdk
# gtk takes care of setting the versions of gsk and gdk
# gio takes care of setting the version of glib
gnome_47 = ["v4_16", "gio/v2_82", "gnome_46"]
gnome_46 = ["v4_14", "cairo-rs/v1_16", "pango/v1_52", "gdk-pixbuf/v2_42", "gio_v2_80"]
gnome_45 = ["v4_12", "cairo-rs/v1_16", "pango/v1_52", "gdk-pixbuf/v2_42", "gio/v2_78"]
gnome_44 = ["v4_10", "cairo-rs/v1_16", "gdk-pixbuf/v2_42", "gio/v2_76"]
gnome_43 = ["v4_8", "cairo-rs/v1_16", "gdk-pixbuf/v2_42", "gio/v2_74"]
gnome_42 = ["v4_6", "cairo-rs/v1_16", "gdk-pixbuf/v2_42", "gio/v2_72"]

[dependencies]
gtk4-sys.workspace = true
field-offset = "0.3"
futures-channel = "0.3"
gdk.workspace = true
gsk.workspace = true
gtk4-macros.workspace = true
cairo-rs.workspace = true
gdk-pixbuf.workspace = true
gio.workspace = true
glib.workspace = true
graphene.workspace = true
libc.workspace = true
pango.workspace = true

[dev-dependencies]
gir-format-check.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
