[package]
name = "gtk4-rs-book-listings"
version = "0.1.0"
edition = "2018"

[dependencies]
once_cell = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.gtk]
path = "../../gtk4"
package = "gtk4"

# gobject_memory_management
[[bin]]
name = "gobject_memory_management_1"
path = "gobject_memory_management/1/main.rs"

[[bin]]
name = "gobject_memory_management_2"
path = "gobject_memory_management/2/main.rs"

[[bin]]
name = "gobject_memory_management_3"
path = "gobject_memory_management/3/main.rs"

[[bin]]
name = "gobject_memory_management_4"
path = "gobject_memory_management/4/main.rs"

# gobject_properties
[[bin]]
name = "gobject_properties_1"
path = "gobject_properties/1/main.rs"

[[bin]]
name = "gobject_properties_2"
path = "gobject_properties/2/main.rs"

[[bin]]
name = "gobject_properties_3"
path = "gobject_properties/3/main.rs"

[[bin]]
name = "gobject_properties_4"
path = "gobject_properties/4/main.rs"

# gobject_signals
[[bin]]
name = "gobject_signals_1"
path = "gobject_signals/1/main.rs"

[[bin]]
name = "gobject_signals_2"
path = "gobject_signals/2/main.rs"

[[bin]]
name = "gobject_signals_3"
path = "gobject_signals/3/main.rs"

# gobject_subclassing
[[bin]]
name = "gobject_subclassing_1"
path = "gobject_subclassing/1/main.rs"

[[bin]]
name = "gobject_subclassing_2"
path = "gobject_subclassing/2/main.rs"

# gobject_values
[[bin]]
name = "gobject_values_1"
path = "gobject_values/1/main.rs"

# hello_world
[[bin]]
name = "hello_world_1"
path = "hello_world/1/main.rs"

[[bin]]
name = "hello_world_2"
path = "hello_world/2/main.rs"

[[bin]]
name = "hello_world_3"
path = "hello_world/3/main.rs"

# main_event_loop
[[bin]]
name = "main_event_loop_1"
path = "main_event_loop/1/main.rs"

[[bin]]
name = "main_event_loop_2"
path = "main_event_loop/2/main.rs"

[[bin]]
name = "main_event_loop_3"
path = "main_event_loop/3/main.rs"

[[bin]]
name = "main_event_loop_4"
path = "main_event_loop/4/main.rs"

[[bin]]
name = "main_event_loop_5"
path = "main_event_loop/5/main.rs"

# saving_window_state
[[bin]]
name = "saving_window_state_1"
path = "saving_window_state/1/main.rs"

# lists
[[bin]]
name = "lists_1"
path = "lists/1/main.rs"

[[bin]]
name = "lists_2"
path = "lists/2/main.rs"

[[bin]]
name = "lists_3"
path = "lists/3/main.rs"

[[bin]]
name = "lists_4"
path = "lists/4/main.rs"

[[bin]]
name = "lists_5"
path = "lists/5/main.rs"

# settings
[[bin]]
name = "settings_1"
path = "settings/1/main.rs"

[[bin]]
name = "settings_2"
path = "settings/2/main.rs"

# todo_app
[[bin]]
name = "todo_app_1"
path = "todo_app/1/main.rs"

# widgets
[[bin]]
name = "widgets_1"
path = "widgets/1/main.rs"

[[bin]]
name = "widgets_2"
path = "widgets/2/main.rs"
