[package]
name = "gtk4-rs-book-listings"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { path = "../../gtk4", package = "gtk4" }
log = "0.4"
once_cell = "1.0"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# actions
[[bin]]
name = "actions_1"
path = "actions/1/main.rs"

[[bin]]
name = "actions_2"
path = "actions/2/main.rs"

[[bin]]
name = "actions_3"
path = "actions/3/main.rs"

[[bin]]
name = "actions_4"
path = "actions/4/main.rs"

[[bin]]
name = "actions_5"
path = "actions/5/main.rs"

[[bin]]
name = "actions_6"
path = "actions/6/main.rs"

[[bin]]
name = "actions_7"
path = "actions/7/main.rs"

# css
[[bin]]
name = "css_1"
path = "css/1/main.rs"

[[bin]]
name = "css_2"
path = "css/2/main.rs"

[[bin]]
name = "css_3"
path = "css/3/main.rs"

[[bin]]
name = "css_4"
path = "css/4/main.rs"

[[bin]]
name = "css_5"
path = "css/5/main.rs"

[[bin]]
name = "css_6"
path = "css/6/main.rs"

[[bin]]
name = "css_7"
path = "css/7/main.rs"

[[bin]]
name = "css_8"
path = "css/8/main.rs"

[[bin]]
name = "css_9"
path = "css/9/main.rs"

# gobject_memory_management
[[bin]]
name = "gobject_memory_management_1"
path = "gobject_memory_management/1/main.rs"

[[bin]]
name = "gobject_memory_management_2"
path = "gobject_memory_management/2/main.rs"

[[bin]]
name = "gobject_memory_management_3"
path = "gobject_memory_management/3/main.rs"

[[bin]]
name = "gobject_memory_management_4"
path = "gobject_memory_management/4/main.rs"

# gobject_properties
[[bin]]
name = "gobject_properties_1"
path = "gobject_properties/1/main.rs"

[[bin]]
name = "gobject_properties_2"
path = "gobject_properties/2/main.rs"

[[bin]]
name = "gobject_properties_3"
path = "gobject_properties/3/main.rs"

[[bin]]
name = "gobject_properties_4"
path = "gobject_properties/4/main.rs"

# gobject_signals
[[bin]]
name = "gobject_signals_1"
path = "gobject_signals/1/main.rs"

[[bin]]
name = "gobject_signals_2"
path = "gobject_signals/2/main.rs"

[[bin]]
name = "gobject_signals_3"
path = "gobject_signals/3/main.rs"

# gobject_subclassing
[[bin]]
name = "gobject_subclassing_1"
path = "gobject_subclassing/1/main.rs"

[[bin]]
name = "gobject_subclassing_2"
path = "gobject_subclassing/2/main.rs"

# gobject_values
[[bin]]
name = "gobject_values_1"
path = "gobject_values/1/main.rs"

[[bin]]
name = "gobject_values_2"
path = "gobject_values/2/main.rs"

# hello_world
[[bin]]
name = "hello_world_1"
path = "hello_world/1/main.rs"

[[bin]]
name = "hello_world_2"
path = "hello_world/2/main.rs"

[[bin]]
name = "hello_world_3"
path = "hello_world/3/main.rs"

# interface_builder
[[bin]]
name = "interface_builder_1"
path = "interface_builder/1/main.rs"

[[bin]]
name = "interface_builder_2"
path = "interface_builder/2/main.rs"

[[bin]]
name = "interface_builder_3"
path = "interface_builder/3/main.rs"

# main_event_loop
[[bin]]
name = "main_event_loop_1"
path = "main_event_loop/1/main.rs"

[[bin]]
name = "main_event_loop_2"
path = "main_event_loop/2/main.rs"

[[bin]]
name = "main_event_loop_3"
path = "main_event_loop/3/main.rs"

[[bin]]
name = "main_event_loop_4"
path = "main_event_loop/4/main.rs"

[[bin]]
name = "main_event_loop_5"
path = "main_event_loop/5/main.rs"

# saving_window_state
[[bin]]
name = "saving_window_state_1"
path = "saving_window_state/1/main.rs"

# list_widgets
[[bin]]
name = "list_widgets_1"
path = "list_widgets/1/main.rs"

[[bin]]
name = "list_widgets_2"
path = "list_widgets/2/main.rs"

[[bin]]
name = "list_widgets_3"
path = "list_widgets/3/main.rs"

[[bin]]
name = "list_widgets_4"
path = "list_widgets/4/main.rs"

[[bin]]
name = "list_widgets_5"
path = "list_widgets/5/main.rs"

[[bin]]
name = "list_widgets_6"
path = "list_widgets/6/main.rs"

# settings
[[bin]]
name = "settings_1"
path = "settings/1/main.rs"

[[bin]]
name = "settings_2"
path = "settings/2/main.rs"

# todo_app
[[bin]]
name = "todo_app_1"
path = "todo_app/1/main.rs"

[[bin]]
name = "todo_app_2"
path = "todo_app/2/main.rs"

[[bin]]
name = "todo_app_3"
path = "todo_app/3/main.rs"
