[package]
name = "book-tests"
version = "0.1.0"
authors = ["Julian Hofer <julianhofer@gnome.org>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
gettext-rs = { version = "0.5", features = ["gettext-system"] }
gtk-macros = "0.2"
once_cell = "1.5"
doc-comment = "0.3.3"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"
rev = "abea0c9980bc083494eceb30dfab5eeb99a73118"
