[package]
name = "gdk4-wayland-sys"
build = "build.rs"
description = "FFI bindings of GDK4 Wayland"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_wayland_sys/"
keywords = ["gdk4", "gdk4-wayland", "ffi", "gtk-rs", "gnome"]

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.edition]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.metadata.system-deps.gtk4_wayland]
name = "gtk4-wayland"
version = "4.0.0"

[package.metadata.system-deps.gtk4_wayland.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4_wayland.v4_10]
version = "4.10"

[package.metadata.system-deps.gtk4_wayland.v4_12]
version = "4.12"

[package.metadata.system-deps.gtk4_wayland.v4_16]
version = "4.16"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "gdk4_wayland_sys"

[features]
v4_4 = []
v4_10 = ["v4_4"]
v4_12 = ["v4_10"]
v4_16 = ["v4_12"]

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
