[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings of GDK4 Win32"
documentation = "https://gtk-rs.org/gtk4-rs/git/docs/gdk4_win32_sys/"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gdk4", "gdk4-win32", "ffi", "gtk-rs", "gnome"]
license = "MIT"
name = "gdk4-win32-sys"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7.0"
rust-version = "1.57"

[package.metadata.system-deps.gtk4_win32]
name = "gtk4-win32"
version = "4.0.0"

[package.metadata.system-deps.gtk4_win32.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4_win32.v4_8]
version = "4.8"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
features = []

[lib]
name = "gdk4_win32_sys"

[features]
v4_4 = []
v4_8 = ["v4_4"]

[dependencies]
libc = "0.2"

[dependencies.gdk]
package = "gdk4-sys"
path = "../../gdk4/sys"
version = "0.7"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core.git"
version = "0.18"

[dependencies.gdk-pixbuf]
package = "gdk-pixbuf-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
