[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings of GDK4 X11"
documentation = "https://gtk-rs.org/gtk4-rs/git/docs/gdk4_x11_sys/"
edition = "2021"
homepage = "http://gtk-rs.org/"
keywords = ["gdk4", "gdk4-x11", "ffi", "gtk-rs", "gnome"]
license = "MIT"
name = "gdk4-x11-sys"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.6.3"
rust-version = "1.64"

[package.metadata.system-deps.gtk4_x11]
name = "gtk4-x11"
version = "4.0.0"

[package.metadata.system-deps.gtk4_x11.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4_x11.v4_10]
version = "4.10"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gdk4_x11_sys"

[features]
dox = ["glib/dox", "gdk/dox"]
v4_4 = []
v4_10 = ["v4_4"]

[dependencies]
libc = "0.2"

[dependencies.gdk]
package = "gdk4-sys"
path = "../../gdk4/sys"
version = "0.6"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
