[package]
name = "gdk4-x11-sys"
build = "build.rs"
description = "FFI bindings of GDK4 X11"
documentation = "https://gtk-rs.org/gtk4-rs/git/docs/gdk4_x11_sys/"
keywords = ["gdk4", "gdk4-x11", "ffi", "gtk-rs", "gnome"]

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.edition]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.metadata.system-deps.gtk4_x11]
name = "gtk4-x11"
version = "4.0.0"

[package.metadata.system-deps.gtk4_x11.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4_x11.v4_10]
version = "4.10"

[package.metadata.system-deps.gtk4_x11.v4_16]
version = "4.16"

[package.metadata.system-deps.gtk4_x11.v4_18]
version = "4.18"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "gdk4_x11_sys"

[features]
v4_4 = []
v4_10 = ["v4_4"]
v4_16 = ["v4_10"]
v4_18 = ["v4_16"]

[dependencies]
libc = "0.2"

[dependencies.gdk4-sys]
workspace = true

[dependencies.glib-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
