[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings of GDK 4"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_sys"
edition = "2021"
homepage = "http://gtk-rs.org/"
keywords = ["gdk", "gdk4", "ffi", "gtk-rs", "gnome"]
license = "MIT"
name = "gdk4-sys"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.6.6"
rust-version = "1.64"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.gtk4]
name = "gtk4"
version = "4.0.0"

[package.metadata.system-deps.gtk4.v4_2]
version = "4.2"

[package.metadata.system-deps.gtk4.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4.v4_6]
version = "4.6"

[package.metadata.system-deps.gtk4.v4_8]
version = "4.7"

[package.metadata.system-deps.gtk4.v4_10]
version = "4.10"

[package.metadata.system-deps.gtk4.v4_12]
version = "4.12"

[lib]
name = "gdk4_sys"

[features]
dox = ["glib/dox", "gobject/dox", "gio/dox", "gdk_pixbuf/dox", "pango/dox", "cairo/dox"]
v4_2 = []
v4_4 = ["v4_2"]
v4_6 = ["v4_4"]
v4_8 = ["v4_6"]
v4_10 = ["v4_8"]
v4_12 = ["v4_10"]

[dependencies]
libc = "0.2"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"

[dependencies.gdk_pixbuf]
package = "gdk-pixbuf-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"

[dependencies.pango]
package = "pango-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
branch = "0.17"
version = "0.17"

[build-dependencies]
system-deps = "6"
pkg-config = "0.3.24"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
