[package]
name = "gdk4-sys"
build = "build.rs"
description = "FFI bindings of GDK 4"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gdk4_sys"
keywords = ["gdk", "gdk4", "ffi", "gtk-rs", "gnome"]

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.edition]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.metadata.system-deps.gtk4]
name = "gtk4"
version = "4.0.0"

[package.metadata.system-deps.gtk4.v4_2]
version = "4.2"

[package.metadata.system-deps.gtk4.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4.v4_6]
version = "4.6"

[package.metadata.system-deps.gtk4.v4_8]
version = "4.7"

[package.metadata.system-deps.gtk4.v4_10]
version = "4.10"

[package.metadata.system-deps.gtk4.v4_12]
version = "4.11"

[package.metadata.system-deps.gtk4.v4_14]
version = "4.13"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "gdk4_sys"

[features]
v4_2 = []
v4_4 = ["v4_2"]
v4_6 = ["v4_4"]
v4_8 = ["v4_6"]
v4_10 = ["v4_8"]
v4_12 = ["v4_10"]
v4_14 = ["v4_12"]

[dependencies]
libc = "0.2"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gdk_pixbuf]
package = "gdk-pixbuf-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.pango]
package = "pango-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[build-dependencies]
system-deps = "6"
pkg-config = "0.3.24"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
