[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings of GSK 4"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gsk4_sys/"
edition = "2021"
homepage = "https://gtk-rs.org/"
keywords = ["gsk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
name = "gsk4-sys"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.7.1"
rust-version = "1.70"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[package.metadata.system-deps.gtk4]
name = "gtk4"
version = "4.0.0"

[package.metadata.system-deps.gtk4.v4_2]
version = "4.2"

[package.metadata.system-deps.gtk4.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4.v4_6]
version = "4.6"

[package.metadata.system-deps.gtk4.v4_10]
version = "4.10"

[package.metadata.system-deps.gtk4.v4_14]
version = "4.13"

[lib]
name = "gsk4_sys"

[features]
v4_2 = []
v4_4 = ["v4_2"]
v4_6 = ["v4_4"]
v4_10 = ["v4_6"]
vulkan = []
broadway = []
v4_14 = ["v4_10"]

[dependencies]
libc = "0.2"

[dependencies.cairo]
package = "cairo-sys-rs"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.gdk]
package = "gdk4-sys"
path = "../../gdk4/sys"
version = "0.7"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.graphene]
package = "graphene-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[dependencies.pango]
package = "pango-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.18"
branch = "0.18"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
