[package]
name = "gsk4-sys"
build = "build.rs"
description = "FFI bindings of GSK 4"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gsk4_sys/"
keywords = ["gsk", "ffi", "gtk-rs", "gnome"]

[package.authors]
workspace = true

[package.categories]
workspace = true

[package.edition]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.metadata.system-deps.gtk4]
name = "gtk4"
version = "4.0.0"

[package.metadata.system-deps.gtk4.v4_2]
version = "4.2"

[package.metadata.system-deps.gtk4.v4_4]
version = "4.4"

[package.metadata.system-deps.gtk4.v4_6]
version = "4.6"

[package.metadata.system-deps.gtk4.v4_10]
version = "4.10"

[package.metadata.system-deps.gtk4.v4_14]
version = "4.14"

[package.metadata.system-deps.gtk4.v4_16]
version = "4.16"

[package.metadata.system-deps.gtk4.v4_18]
version = "4.17"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "gsk4_sys"

[features]
v4_2 = []
v4_4 = ["v4_2"]
v4_6 = ["v4_2"]
v4_10 = ["v4_6"]
vulkan = []
broadway = []
v4_14 = ["v4_10"]
v4_16 = ["v4_14"]
v4_18 = ["v4_16"]

[dependencies]
libc = "0.2"

[dependencies.graphene-sys]
workspace = true

[dependencies.cairo-sys-rs]
workspace = true

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[dependencies.pango-sys]
workspace = true

[dependencies.gdk4-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
