[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings of GTK 4"
documentation = "https://gtk-rs.org/gtk4-rs/stable/latest/docs/gtk4_sys"
edition = "2018"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "gtk4", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gtk-4"
name = "gtk4-sys"
repository = "https://github.com/gtk-rs/gtk4-rs"
version = "0.2.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.gtk4]
name = "gtk4"
version = "4.0.0"

[package.metadata.system-deps.gtk4.v4_2]
version = "4.1.2"

[package.metadata.system-deps.gtk4.v4_4]
version = "4.4"

[lib]
name = "gtk4_sys"

[features]
dox = []
v4_2 = []
v4_4 = ["v4_2"]

[dependencies]
libc = "0.2"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk-pixbuf-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gdk4-sys]
path = "../../gdk4/sys"

[dependencies.gio-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.glib-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.graphene-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gsk4-sys]
path = "../../gsk4/sys"

[dependencies.pango-sys]
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"
